home page is done

--- a/index.html
+++ b/index.html
@@ -2,10 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CICD Week2</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GreenEdge Lawn Care - Home</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>CICD Week2</h1>
-<p>This is my second version</p>
+
+  <header>
+    <h1>GreenEdge Lawn Care</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="products.html">Products</a>
+    </nav>
+  </header>
+
+  <div class="container">
+    <div class="hero">
+      <h2>Professional Lawn Cutting & Garden Maintenance</h2>
+      <p>
+        GreenEdge Lawn Care provides lawn mowing and basic outdoor maintenance services for residential and small commercial properties.
+      </p>
+      <p>
+        We focus on reliable scheduling, clean finishing, and safe equipment handling.
+      </p>
+    </div>
+
+    <div class="section">
+      <h3>Our Main Services</h3>
+      <ul>
+        <li>Lawn mowing (small to large lawns)</li>
+        <li>Edge trimming</li>
+        <li>Weed removal (manual and trimming)</li>
+        <li>Green waste removal</li>
+        <li>Seasonal cleanup</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h3>Service Areas</h3>
+      <p>
+        We currently serve local suburbs and nearby neighborhoods.
+        For larger jobs outside the local area, travel fees may apply.
+      </p>
+    </div>
+
+    <div class="section">
+      <h3>Contact</h3>
+      <p><strong>Email:</strong> contact@greenedgelawncare.com</p>
+      <p><strong>Phone:</strong> +64 21 000 0000</p>
+      <p><strong>Business Hours:</strong> Mon - Sat, 8:00 AM - 6:00 PM</p>
+    </div>
+  </div>
+
+  <footer>
+    <p>© 2026 GreenEdge Lawn Care. All rights reserved.</p>
+  </footer>
+
 </body>
 </html>
